--- a/AZ-900 Microsoft Azure Fundamentals/2.2. Azure Account, Subscription, Support and Billing.md
+++ b/AZ-900 Microsoft Azure Fundamentals/2.2. Azure Account, Subscription, Support and Billing.md
@@ -41,8 +41,9 @@
         - Each **invoice section** can be coupled to different subscriptions.
           - Each invoice section is a line item on the invoice that shows the charges incurred that month
           - 
-Billing boundary: This subscription type determines how an Azure account is billed for using Azure. You can create multiple subscriptions for different types of billing requirements. Azure generates separate billing reports and invoices for each subscription so that you can organize and manage costs.
-Access control boundary: Azure applies access-management policies at the subscription level, and you can create separate subscriptions to reflect different organizational structures. An example is that within a business, you have different departments to which you apply distinct Azure subscription policies. This billing model allows you to manage and control access to the resources that users provision with specific subscriptions.
+- Billing boundary: This subscription type determines how an Azure account is billed for using Azure. You can create multiple subscriptions for different types of billing requirements. Azure generates separate billing reports and invoices for each subscription so that you can organize and manage costs.
+
+- Access control boundary: Azure applies access-management policies at the subscription level, and you can create separate subscriptions to reflect different organizational structures. An example is that within a business, you have different departments to which you apply distinct Azure subscription policies. This billing model allows you to manage and control access to the resources that users provision with specific subscriptions.
 ## Support
 
 ### Free
